--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 body{
     background:var(--bg);
     color:var(--fg);
-    font-family: "NanoStaticGuob18030Pixel24 R","NanoStaticGuob18030Pixel24S R","Px437 IBM VGA 8x16",monospace;
+    font-family: "NanoStaticGuob18030Pixel24 R","NanoStaticGuob18030Pixel24S R","Px437 IBM VGA 8x16";
     font-size:22px;
     line-height:1.5;
     height:100vh;
