--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 @import url("_fonts/24/result.css");
 @import url("_fonts/24s/result.css");
 @import url("_fonts/ds/result.css");
+@import url("https://fontsapi.zeoseven.com/217/main/result.css");
 :root{
     --bg:#000000;
     --fg:#ffffff;
