--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ const panel = {
     about:
     `此网站由<b>寒沙</b>所运营
 
-    寒沙，原名<p class="text-container">李响</p>，出生于2011年，<i>浙江温州人</i>，纳米字库创立者，是一位爱好字体制作也是一位温州三中的 中 初 生 呦~ (＾ω＾)ノ
+    寒沙，本名<p class="text-container">李响</p>，出生于2011年，<i>浙江温州人</i>，纳米字库创立者，是一位爱好字体制作也是一位温州三中的 中 初 生 呦~ (＾ω＾)ノ
     `,
     links:
     `
