--- a/dos/index.html
+++ b/dos/index.html
@@ -105,6 +105,7 @@ body{
             transition: all .8s;
         }
 </style>
+<link rel="icon" type="image/x-icon" href="./_icon/main.ico" />
 </head>
 <body>
 
