--- a/wfshow/index.html
+++ b/wfshow/index.html
@@ -156,7 +156,7 @@ footer{
 
     <!-- 合并输入框：既可直接输入，也可下拉选择 -->
     <label for="textInput">展示文本</label>
-    <input list="presetList" id="textInput" placeholder="输入或选择…" value="字体展示 Font Preview">
+    <input list="presetList" id="textInput" placeholder="输入或选择…" value="">
     <datalist id="presetList">
         <option value="南去经三国，东来过五湖。">字形风格检查</option>
         <option value="啰哩啰嗦的，你到底想怎么样！">义务教育语文课程常用字表字形支持</option>
