--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     }
 
     :root{
-        --paper:#f7f2e8;
-        --ink:#2e1503;
-        --gold:#b8954f;
-        --red:#8a3324;
-        --shadow:rgba(0,0,0,.15);
+        --paper:#faa9a9;
+        --ink:#6d0909;
+        --gold:#c45959;
+        --red:#924b3e;
+        --shadow:rgba(255, 255, 255, 0.15);
         transition: all .3s;
     }
     *{margin:0;padding:0;box-sizing:border-box;font-family:NanoOldSong-A,NanoOldSong-B,NanoOldSong-C,NanoOldSong-D;}
@@ -60,7 +60,7 @@
     /* ===== 卷轴 Tab ===== */
     header{
         height:110px;
-        background:linear-gradient(to bottom,var(--gold) 0%,#d6b66b 50%,var(--gold) 100%);
+        background:linear-gradient(to bottom,var(--gold) 0%,#db7e77 50%,var(--gold) 100%);
         display:flex;
         justify-content:center;
         align-items:center;
@@ -72,7 +72,7 @@
     .tabs{display:flex;gap:40px;}
     .tab{
         cursor:pointer;
-        color:#fff;
+        color:#cfcfcf;
         font-size:22px;
         letter-spacing:4px;
         padding:8px 18px;
@@ -96,7 +96,7 @@
     .book-list{display:flex;gap:40px;flex-wrap:wrap;justify-content:center;}
     .book{
         width:160px;height:220px;
-        background:#fff;
+        background:#cfcfcf;
         border:2px solid var(--gold);
         border-radius:4px;
         box-shadow:0 4px 12px var(--shadow);
@@ -124,7 +124,7 @@
     #footer{
     height:44px;
     background:var(--bar);
-    color:#8d4949;
+    color:#b31010;
     font-weight:bold;
     display:flex;
     align-items:center;
@@ -137,7 +137,7 @@
         width:180px;height:60px;
         font-size:20px;
         color:var(--ink);
-        background:linear-gradient(to bottom,#fff,#e7dcc5);
+        background:linear-gradient(to bottom,#cccccc,#b96e6e);
         border:2px solid var(--gold);
         border-radius:30px;
         cursor:pointer;
@@ -197,6 +197,11 @@
     此网站由<b>寒沙</b>所运营
     <br>
     寒沙，本名<p class="text-container">李响</p>，出生于2011年，<i>浙江温州人</i>，纳米字库创立者，是一位爱好字体制作也是一位温州三中的 中 初 生 呦~ (＾ω＾)ノ
+    <br><br><br><br>
+    <h3>联系方式</h3>
+    QQ: <i>3582930858</i><br>
+    邮箱: <i>3582930858@qq.com</i><br>
+    纳米字库QQ群: <i>723768896</i>
 </section>
 
 <section id="book" class="page">
