--- a/wfshow/index.html
+++ b/wfshow/index.html
@@ -152,7 +152,7 @@ footer{
 <body>
 
 <div class="card">
-    <h1>NANOFONT – CSS 字体展示</h1>
+    <h1>CSS 字体展示器</h1>
 
     <!-- 合并输入框：既可直接输入，也可下拉选择 -->
     <label for="textInput">展示文本</label>
@@ -161,7 +161,14 @@ footer{
         <option value="南去经三国，东来过五湖。">字形风格检查</option>
         <option value="啰哩啰嗦的，你到底想怎么样！">义务教育语文课程常用字表字形支持</option>
         <option value="你这菜还齁咸的……哎呀，你鼻子发齉得嘞">现代汉语通用字表字形支持</option>
-        <option value="娄桥玕东 岭底𡺬崪 泽雅水礁坑 城北黄檀硐 东海北麂岛 高楼镇寨寮溪">温州地名用字支持</option>
+        <option value=
+"娄桥玕东 岭底𡺬崪 泽雅水礁坑 城北黄檀硐 东海北麂岛 
+高楼镇寨寮溪 南郊德政 瓯海金安 瑞安丽岙 鹿城五马 
+茶山永宁 永嘉乌牛 瓯海南白象 潘桥潭头 瑞安仙岩">温州地名用字支持（简体）</option>
+        <option value=
+"婁橋玕東 嶺底𡺬崪 澤雅水礁坑 城北黃檀硐 東海北麂島 
+高樓鎮寨寮溪 南郊德政 甌海金安 瑞安麗嶴 鹿城五馬 
+茶山永寧 永嘉烏牛 甌海南白象 潘橋潭頭 瑞安仙岩">温州地名用字支持（繁体）</option>
     </datalist>
 
     <label for="cssUrlInput">外部 CSS 字体文件 URL</label>
