--- a/wfshow/index.html
+++ b/wfshow/index.html
@@ -169,6 +169,10 @@ footer{
 "婁橋玕東 嶺底𡺬崪 澤雅水礁坑 城北黃檀硐 東海北麂島 
 高樓鎮寨寮溪 南郊德政 甌海金安 瑞安麗嶴 鹿城五馬 
 茶山永寧 永嘉烏牛 甌海南白象 潘橋潭頭 瑞安仙岩">温州地名用字支持（繁体）</option>
+        <option value=
+"The quick brown fox jump over the lazy dog">西文支持</option>
+        <option value=
+"下一站：新桥站； Next station: Xinqiao">中西文结合支持</option>
     </datalist>
 
     <label for="cssUrlInput">外部 CSS 字体文件 URL</label>
